--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wristband/nestjs-auth",
   "description": "SDK for integrating your NestJS application with Wristband. Handles user authentication and token management.",
   "author": "Wristband",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "private": false,
   "homepage": "https://wristband.dev",
@@ -53,7 +53,7 @@
     "sdk"
   ],
   "scripts": {
-    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+    "build": "npm run clean && mkdir dist && npm run build:cjs && npm run build:esm && npm run build:types",
     "build:cjs": "tsc -p config/tsconfig.cjs.json",
     "build:esm": "tsc -p config/tsconfig.esm.json",
     "build:types": "tsc -p config/tsconfig.types.json",
@@ -62,19 +62,17 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.10",
+    "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.3.10",
-    "@wristband/express-auth": "^1.5.0",
-    "cookie-parser": "^1.4.6",
-    "csrf": "^3.1.0",
-    "iron-session": "^8.0.2"
+    "@nestjs/core": "^10.4.1",
+    "@wristband/express-auth": "^2.0.1",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.2",
-    "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/schematics": "^10.1.3",
-    "@nestjs/testing": "^10.3.10",
+    "@nestjs/cli": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.2",
