chore: pkg updates, exclude tests during build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "tsBuildInfoFile": ".tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": ["dist", "node_modules", "config"]
+  "exclude": ["dist", "node_modules", "config", "src/test"]
 }
