--- a/package.json
+++ b/package.json
@@ -65,21 +65,20 @@
     "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
-    "@wristband/express-auth": "^2.0.1",
-    "cookie-parser": "^1.4.6"
+    "@wristband/express-auth": "^2.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.4",
+    "@nestjs/cli": "^10.4.5",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.0.2",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
