--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "build:esm": "tsc -p config/tsconfig.esm.json",
     "build:types": "tsc -p config/tsconfig.types.json",
     "clean": "rm -rf dist",
+    "lint": "eslint .",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -68,6 +69,7 @@
     "@wristband/express-auth": "^2.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/schematics": "^10.1.4",
@@ -75,10 +77,13 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
