--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "keywords": [
     "nestjs",
+    "expressjs",
     "nodejs",
     "typescript",
     "authentication",
@@ -68,15 +69,14 @@
     "test:cov": "jest --coverage --no-cache --runInBand"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.1",
+    "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.1",
+    "@nestjs/core": "^10.4.3",
     "@wristband/express-auth": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@nestjs/cli": "^10.4.5",
-    "@nestjs/platform-express": "^10.4.3",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
     "@types/express": "^4.17.21",
