--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wristband/nestjs-auth",
   "description": "SDK for integrating your NestJS application with Wristband. Handles user authentication and token management.",
   "author": "Wristband",
-  "version": "1.0.0-rc4",
+  "version": "1.0.0-rc5",
   "license": "MIT",
   "private": false,
   "homepage": "https://wristband.dev",
@@ -72,7 +72,7 @@
     "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.3",
-    "@wristband/express-auth": "^2.1.3"
+    "@wristband/express-auth": "^2.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
@@ -82,7 +82,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
-    "eslint": "^9.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
@@ -94,6 +95,6 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.17.0"
   }
 }
